[package]
name = "nucleo-picker"
version = "0.4.2"
edition = "2021"
authors = ["Alex Rutar <alex@rutar.org>"]
description = "A fuzzy picker tui library based on nucleo"
repository = "https://github.com/autobib/nucleo-picker"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.90"
crossterm = "0.28.1"
nucleo = "0.5"
ratatui = "0.28.1"

[dev-dependencies]
walkdir = "2.5"

[[example]]
name = "find"

[[example]]
name = "blocking"
